# candle-utils

./: Cargo.toml  LICENSE-APACHE  README.md
examples/bert/: README.md  main.rs
src/: device.rs  lib.rs  loader.rs  tensor.rs  tokenization.rs
src/candle_transformers_shim/: mod.rs
src/candle_transformers_shim/models/: bert.rs  mod.rs
